--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.3.4"
+    "@mind-elixir/node-menu": "^1.0.2",
+    "axios": "^1.4.0",
+    "mind-elixir": "^2.0.5",
+    "vue": "^3.3.4",
+    "vue-router": "^4.2.4"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.9",
+    "@types/node": "^20.4.2",
     "@vitejs/plugin-vue": "^4.2.3",
     "autoprefixer": "^10.4.14",
     "daisyui": "^3.2.1",
@@ -20,6 +26,8 @@
     "tailwindcss": "^3.3.2",
     "typescript": "^5.0.2",
     "vite": "^4.4.0",
+    "vite-plugin-md": "^0.22.5",
+    "vue-i18n": "^9.3.0-beta.19",
     "vue-tsc": "^1.8.3"
   }
 }
