feat: update core

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@mind-elixir/node-menu-neo": "^1.0.3",
     "axios": "^1.4.0",
     "file-saver": "^2.0.5",
-    "mind-elixir": "^4.0.0-beta.2",
+    "mind-elixir": "^4.0.5",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
   },
